--- a/src/app/components/receipt/receipt-creator/receipt-creator.component.scss
+++ b/src/app/components/receipt/receipt-creator/receipt-creator.component.scss
@@ -96,26 +96,6 @@ input {
   margin-right: auto;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-left: auto;
-  margin-right: auto;
-
-  tbody tr:nth-child(odd) {
-    background-color: #f8f8f8;
-  }
-
-  tbody tr:hover {
-    background-color: #ddd;
-  }
-
-  thead tr th {
-    padding: 0.5em 1em;
-    border-bottom: 1px solid #ccc;
-  }
-}
-
 #table-body tr td {
   height: 10px;
   padding: 0.5em 1em;
