--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,26 @@ button {
   font-size: 1.1rem;
 }
 
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+
+  tbody tr:nth-child(odd) {
+    background-color: #f8f8f8;
+  }
+
+  tbody tr:hover {
+    background-color: #ddd;
+  }
+
+  thead tr th {
+    padding: 0.5em 1em;
+    border-bottom: 1px solid #ccc;
+  }
+}
+
 .btn {
   border: none;
   border-radius: 3px;
